add support for catalog of examples
